--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/db1?createTableIfNotExists=true
+spring.datasource.username=root
+spring.datasource.password=Bunny@123
 
+spring.jpa.hibernate.ddl-auto=update
